# human-time-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  human-time.toml
src/: lib.rs  main.rs
tests/: tests.rs
