[package]
name = "human-time-cli"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for converting time durations to human-readable formats, built using the `human-time` crate."
authors = ["Dave Johnson <thisdavej@gmail.com>"]
license = "MIT"
repository = "https://github.com/thisdavej/human-time-cli"
readme = "README.md"
keywords = ["human", "time", "elapsed", "duration"]


[dependencies]
argh = "0.1.13"
dirs = "6.0.0"
human-time = "0.1.6"
regex-lite = "0.1.6"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

[[bin]]
name = "human-time"
path = "src/main.rs"
